Fixes the iPad layout issue on the landing page.

--- a/modules/frontend/public/stylesheets/landing_page.less
+++ b/modules/frontend/public/stylesheets/landing_page.less
@@ -480,12 +480,10 @@
 				}			
 			
 				img.positioned {
-					display: block;
-					position: absolute;
+			    display: block;
 					z-index: 0;
-					right: -40px;
-					//top: 1320px;
-					bottom: 1300px;
+					margin-left: 339px;
+					margin-top:-101px;
 				}
 		
 			} // end .step-3 
